--- a/q6/q6/index.html
+++ b/q6/q6/index.html
@@ -1,24 +1,42 @@
 <!DOCTYPE html>
 <html lang="ja">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/base.css">
-  <link rel="stylesheet" href="./css/style.css">
-  <title>LayoutParts-Q3</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>LayoutParts-Q3</title>
+  </head>
 
-<body>
-  <!-- Q6回答はここから -->
-  <!-- Q6回答はここまで -->
-  <main>
-    <div class="wrapper">
-      <h1 class="title">基本レイアウト・パーツ</h1>
-      <h2 class="sub--title">Q6ナビバー</h2>
-    </div>
-  </main>
-</body>
+  <body>
+    <!-- Q6回答はここから -->
+    <header>
+      <div class="header_content">
+        <div class="logo"><a href="#">SHOP</a></div>
+        <nav class="navbar">
+          <ul>
+            <li>
+              <a href="#">HOME</a>
+            </li>
+            <li>
+              <a href="#">MenuList</a>
+            </li>
+            <li>
+              <a href="#">Access</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <!-- Q6回答はここまで -->
+    <main>
+      <div class="wrapper">
+        <h1 class="title">基本レイアウト・パーツ</h1>
+        <h2 class="sub--title">Q6ナビバー</h2>
+      </div>
+    </main>
+  </body>
 
 </html>
